# nlhappy

./: .gitignore  LICENSE  README.en.md  README.md  nohup.out  pyproject.toml  requirements.txt  run.py  test.ipynb  test.py
.ipynb_checkpoints/: requirements-checkpoint.txt  run-checkpoint.py
bash/: cblue_ee_charspan.sh  cblue_ee_chartoken.sh  cblue_ee_span.sh  cblue_ner_span.sh  cblue_tc.sh  clue_ner.sh  clue_ner_span.sh  clue_ner_token.sh  cme_ee_chartoken.sh  du_ie_char.sh  lcqmc.sh  newstitle.sh  tnews.sh
configs/: config.yaml
configs/.ipynb_checkpoints/: config-checkpoint.yaml
configs/callbacks/: default.yaml
configs/datamodule/: sentence_pair.yaml  span_classification.yaml  text_classification.yaml  tnews_datamodule.yaml  token_classification.yaml  triple_extraction.yaml
configs/mode/: debug.yaml  exp.yaml
configs/model/: bert_bi_encoder.yaml  bert_crf.yaml  bert_cross_encoder.yaml  bert_global_pointer.yaml  bert_gplinker.yaml  bert_sequence_classification.yaml  bert_softmax.yaml  bert_text_classification.yaml  bert_text_multi_classification.yaml  bert_token_classification.yaml  mnist_model.yaml
configs/trainer/: ddp.yaml  default.yaml
d_lab/: run.py  train.py
d_lab/configs/: config.yaml
d_lab/datamodules/: __init__.py  sentence_pair_datamodule.py  span_classification.py  span_classification_datamodule.py  text_classification.py  text_classification_datamodule.py  token_classification.py  token_classification_datamodule.py  triple_extraction.py  triple_extraction_datamodule.py
d_lab/metrics/: span.py  triple.py
d_lab/pipelines/: __init__.py  sentence_segmenter.py  span_classification.py  text_classification.py  token_classification.py  triple_extraction.py
d_lab/spacy_components/: __init__.py  sentence_segmenter.py  span_classifier.py  text_classifier.py  triple_extraction.py  triple_extractor.py
d_lab/storers/: aliyun_oss.py
d_lab/tricks/: adversarial_training.py
d_lab/utils/: data.py  dataset.py  preprocessing.py  storer.py  type.py  utils.py
data/: datasets.ipynb
data/clue_ner/: label2id.json
nlhappy/: __init__.py  __main__.py  run.py
nlhappy/algorithms/: __init__.py  text_match.py
nlhappy/callbacks/: __init__.py  ckpt_callbacks.py  transformer_callbacks.py  wandb_callbacks.py
nlhappy/components/: __init__.py  entity_normalizer.py  event_extractor.py  information_extractor.py  relation_extractor.py  sentence_segmenter.py  tokenizer.py  (+4 more)
notebooks/: test_cluener.ipynb  torch2onnx.ipynb
scripts/: cblue_ee_charspan.sh  du_tc_multi.sh  test.sh
src/: train.py
(+334 files in other folders)
