[tool.poetry]
name = "nlhappy"
version = "2022.10.20"
description = "自然语言处理(NLP)"
authors = ["wangmengdi <790990241@qq.om>"]
license = "MIT"
readme = "README.md"
documentation = "https://wangmengdi.notion.site/NLHAPPY-264f05d1084848efa42068c83539904a"

[tool.poetry.dependencies]
python = ">=3.7"
torch = ">=1.8.0"
pytorch-lightning = "1.7.7"
datasets = ">=2.0.0"
transformers = ">=4.17.0"
hydra-core = "1.1"
hydra-colorlog = ">=1.1.0"
rich = "^12.4.3"

googletrans = "4.0.0rc1"
spacy = ">=3.3.0"
wandb = ">=0.12.18"


[tool.poetry.extras]
all = ["spacy", "wandb", "googletrans"]


[tool.poetry.plugins."spacy_factories"]
"span_classifier" = "nlhappy.components:get_spancat"


[tool.poetry.scripts]
nlhappy = "nlhappy.run:train"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"